Use AS7 for TCK and integration tests