@@ -44,21 +44,30 @@
          <scope>test</scope>
       </dependency>
 
-      <dependency>
-         <groupId>org.jboss.test-harness</groupId>
-         <artifactId>jboss-test-harness-jboss-as-60</artifactId>
-         <scope>test</scope>
-         <exclusions>
-            <exclusion>
-               <groupId>org.jboss.slf4j</groupId>
-               <artifactId>slf4j-jboss-logging</artifactId>
-            </exclusion>
-            <exclusion>
-               <groupId>org.jboss.ws.native</groupId>
-               <artifactId>jbossws-native-core</artifactId>
-            </exclusion>
-         </exclusions>
-      </dependency>
+       <dependency>
+           <groupId>org.jboss.arquillian.container</groupId>
+           <artifactId>arquillian-container-spi</artifactId>
+       </dependency>
+
+       <dependency>
+           <groupId>org.jboss.as</groupId>
+           <artifactId>jboss-as-arquillian-common</artifactId>
+       </dependency>
+
+       <dependency>
+          <groupId>org.jboss.jbossas.as7-cdi-tck</groupId>
+          <artifactId>jbossas-container</artifactId>
+          <exclusions>
+              <exclusion>
+                  <groupId>org.jboss.arquillian.container</groupId>
+                  <artifactId>arquillian-container-spi</artifactId>
+              </exclusion>
+              <exclusion>
+                  <groupId>org.jboss.as</groupId>
+                  <artifactId>jboss-as-arquillian-common</artifactId>
+              </exclusion>
+          </exclusions>
+       </dependency>
 
       <dependency>
          <groupId>org.jboss.arquillian.container</groupId>
@@ -242,6 +251,23 @@
                            <name>org.jboss.testharness.runIntegrationTests</name>
                            <value>true</value>
                         </property>
+                         <property>
+                             <name>org.jboss.testharness.spi.Containers</name>
+                             <value>org.jboss.jbossas.cdiTck.container.ArquillianContainerAdaptor</value>
+                         </property>
+                         <property>
+                             <name>org.jboss.har2arq.container</name>
+                             <value>org.jboss.as.arquillian.container.managed.ManagedDeployableContainer</value>
+                         </property>
+                         <property>
+                             <name>jboss.options</name>
+                             <value>-Xmx2048m -XX:MaxPermSize=512m -enableassertions -Dorg.jboss.testharness.api.ConfigurationBuilder=org.jboss.jsr299.tck.impl.JSR299PropertiesBasedConfigurationBuilder
+                             </value>
+                         </property>
+                         <property>
+                           <name>jboss.datasource.add</name>
+                           <value>true</value>
+                        </property>
                      </systemProperties>
                   </configuration>
                </plugin>
@@ -292,6 +318,23 @@
                         <property>
                            <name>org.jboss.testharness.outputDirectory</name>
                            <value>target</value>
+                        </property>
+                        <property>
+                            <name>org.jboss.testharness.spi.Containers</name>
+                            <value>org.jboss.jbossas.cdiTck.container.ArquillianContainerAdaptor</value>
+                        </property>
+                        <property>
+                            <name>org.jboss.har2arq.container</name>
+                            <value>org.jboss.as.arquillian.container.managed.ManagedDeployableContainer</value>
+                        </property>
+                        <property>
+                            <name>jboss.options</name>
+                            <value>-Xmx2048m -XX:MaxPermSize=512m -enableassertions -Dorg.jboss.testharness.api.ConfigurationBuilder=org.jboss.jsr299.tck.impl.JSR299PropertiesBasedConfigurationBuilder
+                            </value>
+                        </property>
+                        <property>
+                           <name>jboss.datasource.add</name>
+                           <value>true</value>
                         </property>
                      </systemProperties>
                   </configuration>
